--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   
   <title>Frontend Mentor | Stats preview card component</title>
 
-  <link rel="stylesheet" href="/assets/css/reset.css">
-  <link rel="stylesheet" href="/assets/css/variables.css">
-  <link rel="stylesheet" href="/assets/css/style.css">
-  <link rel="stylesheet" href="/assets/css/responsive.css">
+  <link rel="stylesheet" href="assets/css/reset.css">
+  <link rel="stylesheet" href="assets/css/variables.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/responsive.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
